[package]
name = "blob-consistency-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2-base = {default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/chengwenxi/halo2-lib.git", branch="0.3.0-ce"}

halo2-ecc = {default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/chengwenxi/halo2-lib.git", branch="0.3.0-ce"}

bls12_381 = { git = "https://github.com/chengwenxi/bls12_381.git", branch = "eip4844" }
poseidon = {git = "https://github.com/chengwenxi/halo2-lib.git", branch="0.3.0-ce", package="poseidon"}

rand = "0.8"
serde = { version = "=1.0", default-features = false, features = ["derive"] }
serde_json = "=1.0"

[dev-dependencies]
poseidon_native = { git = "https://github.com/axiom-crypto/halo2.git", branch = "axiom/dev", package = "poseidon" }
criterion = {version = "0.4", features = ["html_reports"]}

[[bench]]
name = "create_proof"
harness = false

